fix page overflow Fixes #9

--- a/static/form.css
+++ b/static/form.css
@@ -50,7 +50,7 @@ label {
     color: #0e243b;
 }
 .form-dropdown {
-    width: 100%;
+    width: 90%;
     padding: 0.5em;
     font-size: 1rem;
     height: 3em;
@@ -251,7 +251,7 @@ input[type="checkbox"]{
 }
 .info-circle {
     display: inline-flex;
-    color: #007bff; /* A nice blue color */
+    color: #007bff;
     font-size: 18px;
     cursor: help;
     margin-left: 5px;
@@ -262,22 +262,25 @@ input[type="checkbox"]{
 .info-circle::after {
     content: attr(data-tooltip); /* Use the data-tooltip attribute */
     position: absolute;
-    top: 50%;
-    left: 110%;
+    top: 120%;
+    left: 50%;
     transform: translateY(-50%);
-    max-width: 400px;
-    white-space: normal;    
+    min-width: 140px;
+    max-width: 400px; 
     background-color: #333;
     color: #fff;
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 12px;
-    white-space: nowrap;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.2s;
     z-index: 100;
+    white-space: normal;      /* Allow wrapping */
+    overflow-wrap: break-word;/* Break long words */
+    word-break: break-word;
+    pointer-events: none;
   }
 
 .info-circle:hover::after {  /* Show tooltip on hover */
@@ -304,7 +307,7 @@ input[type="checkbox"]{
 }
 .remove-btn {
        /* Good default for desktop */
-    width: 25vw;
+    width: 25%;
     min-width: 60px;
     padding: 5px 10px;
     box-sizing: border-box;
